icmake (7.23.00)

  * Updated CXXFLAGS in generated icmconf files to contain --std=c++14

  * Added the define
        //#define PRECOMP "-x c++-header"
    to icmconf files. When activated, internal header files are precompiled 
    when they are more recent than their precompiled versions.

  * Added the define
        #define IH ".ih"
    to icmconf files, specifying the extension of internal header files. It is
    used by PRECOMP. 

  * Reorganized the #defines in the icmconf mold file so that related #defines
    are easily recognized.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 15 Oct 2015 14:52:21 +0200

icmake (7.22.01)

  * The `ar' program in binutils >= 2.25.7 generates a warning when the u
    modifier is used in combination with the r option. Icmake's icmbuild
    script previously used 'ar cru'. To prevent the warning, 'ar cr' is now
    used.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 16 May 2015 20:35:40 +0200

icmake (7.22.00)

  * `icmstart dir library' uncomments the library construction spec. and
    comments out the main.cc spec. in icmconf

  * `icmstart -b ...' (basic installation), won't install the default
    VERSION, usage.cc and version.cc files

  * `icmstart -b ...' and `icmstart ... library comments out the line
     #define USE_LIBRARY in icmconf.

  * The default g++ compiler flags now specify c++14

  * Added the file 'required' summarizing the software which was used for
    building icmake.

  * The entry //#define EXTENSION   ".exe" was removed from INSTALL.im as it's
    apparently no longer required for systems like cygwin. In cases the .exe
    extension is needed, rename the binaries accordingly after building them.

  * Removed -D__STDC_VERSION__=199901L from the flex call in ./comp/build

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 20 Jan 2015 15:53:40 +0100

icmake (7.21.01)

  * By default, ./icm_bootstrap no longer specifies -g when compiling icmake's