@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Icmake V 7.23.00</title>
+<title>Icmake V 7.23.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr>
-<h1>Icmake V 7.23.00</h1>
+<h1>Icmake V 7.23.01</h1>
 <h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
 
 <h2>Center for Information Technology, University of Groningen</h2><h2>1992-2015</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/7.23.01">7.23.01</a>
+Oct 15, 2015;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/7.23.00">7.23.00</a>
 Oct 15, 2015;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/7.22.01">7.22.01</a>
@@ -40,9 +42,7 @@ May 17, 2015;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/7.22.00">7.22.00</a>
 Jan 20, 2015;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/7.21.01">7.21.01</a>
-Jan 20, 2014;
-        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/7.21.00">7.21.00</a>
-Aug 2, 2013.
+Jan 20, 2014.
         </ul>
     
 <p>
