@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>icmstart</h1>
-<h2>icmake.7.23.00.tar.gz</h2>
+<h2>icmake.7.23.01.tar.gz</h2>
 <h2>1992-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>icmstart(1)</h1>
-<h2>icmake.7.23.00.tar.gz starts icmbuild program maintenance</h2>
+<h2>icmake.7.23.01.tar.gz starts icmbuild program maintenance</h2>
 <h2>1992-2015</h2>
 
 
